--- a/_posts/2019-12-24-the-us-narrative-today.html
+++ b/_posts/2019-12-24-the-us-narrative-today.html
@@ -1666,107 +1666,107 @@ stories:
   domain: http://www.morganmessenger.com/
   link: https://www.morganmessenger.com/2019/12/18/myers-road-traffic-light-needs-power/
 images:
-- name: sand-hand-sand-hand-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-atari-asteroids.jpg
-- name: bf-skinner-construction-crane-city.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-construction-crane-city.jpg
-- name: copper-circuit-statue-of-liberty_35910144944_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-of-liberty_35910144944_o.jpg
-- name: server-cloud-server-racks-clouds-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-really-hot.jpg
-- name: art-museum-art-museum-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-horiz-circuit.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-smooth-ride.jpg
-- name: berlinwall-DSC-0084-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-crabapple.jpg
-- name: walled-garden-walled-garden-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-spagetti-accident.jpg
-- name: bf-skinner-statue-of-liberty-back.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-statue-of-liberty-back.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-plentiful.jpg
-- name: wind-mills-windmills-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-internet-numbers.jpg
-- name: border-crossing-bordercrossing-blue-brush.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-blue-brush.png
-- name: old-house-oldhouse-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-kand-two.jpg
-- name: amusement-park-amusement-park-2-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-diego-rivera1.jpg
-- name: gypsymosaic-gypsy-eyes-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-green-zuma.jpg
-- name: nazi-invasion-do-not-turn-trolley-car.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-do-not-turn-trolley-car.jpg
-- name: white-house-whitehouse-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-blue-brush.jpg
-- name: downtheline-downtheline-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-colorful-dream.jpg
-- name: old-barn-old-barn-1500-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-pablo-blue.jpg
-- name: old-school-house-old-schoolhouse-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-purple-storm.jpg
-- name: mistywoods-babyfoot-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-blue-circuit.jpg
-- name: bf-skinner-boats-waterfront-bristol.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-boats-waterfront-bristol.jpg
-- name: server-cloud-server-racks-door-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-plentiful.jpg
-- name: legal-statue-legalstatue-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-blue-brush.jpg
-- name: san-francisco-street-view-san-francisco-street-view-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-cinnamon-rolls.jpg
-- name: two-sattelite-dishes-norman-rockwell-ruby-bridges.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/two-sattelite-dishes-norman-rockwell-ruby-bridges.jpg
-- name: death-valley-death-valley-national-park-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-post-modern.jpg
-- name: stories-G0520270-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-G0520270-blue-circuit.jpg
-- name: mediterranean-mediterranean.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-aqua.jpg
-- name: old-church-oldchurch-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-yellow-collage.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-kandinsky-bv.jpg
-- name: curtain-curtain-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dark-soul.jpg
-- name: ellis-island-ellis-island-room-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-dark-soul.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-graham-sutherland.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-atari-asteroids.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-sand-paper.jpg
-- name: razorwire-DSC-0080-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-crafty-painting.jpg
-- name: nazi-invasion-docks-water-front-ships-containers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-docks-water-front-ships-containers.jpg
-- name: downtown-trucksilo-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-wols.jpg
-- name: aws-s3-square-C32Eg8bUEAEa-gj.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C32Eg8bUEAEa-gj.jpg
-- name: oldtrain-oldtrain-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-free-woman.jpg
-- name: adam-smith-adam-smith-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-light-dali.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-dali-two.jpg
-- name: carry-load-carryload-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-green-zuma.jpg
-- name: walled-garden-walled-garden-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-post-modern.jpg
-- name: white-house-lawn-white-house-lawn-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-creativity.jpg
-- name: cargo-ship-cargo-ship-on-sea-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-free-woman.jpg
-- name: fence-mexico-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-ww2-dresden.jpg
-- name: nazi-invasion-construction-zone-claw.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-construction-zone-claw.jpg
-- name: udnie-IMG_8374.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8374.jpg
+- name: oldhousecars-house-old-cars-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-blue-circuit.jpg
+- name: crow_internet_numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_internet_numbers.jpg
+- name: aws-s3-stories-new-27-93-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-27-93-800-500-0-max-0--5--5.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-light-dali.jpg
+- name: walled-garden-walled-garden-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-atari-missle.jpg
+- name: bf-skinner-old-man-crossing-border.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-man-crossing-border.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-sunday.jpg
+- name: oldcabin-oldcabin-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-post-modern.jpg
+- name: old-church-oldchurch-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-oily-mcoilface.jpg
+- name: power-lines-power-lines-empty-space.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space.jpg
+- name: aws-s3-square-64-132-800-500-0-max-0--5--1-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-64-132-800-500-0-max-0--5--1-square.jpg
+- name: nazi-invasion-water-fountain-many-shooting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-water-fountain-many-shooting.jpg
+- name: meadowbutterfly-meadow-butterfly-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-gred-mash.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-matrix.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-matrix.JPG
+- name: power-lines-power-lines-empty-space-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-crabapple.jpg
+- name: machine-road-machine-road-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-purple-storm.jpg
+- name: carry-load-carryload-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-colorful-dream.jpg
+- name: oldcabin-oldcabin-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-kandinsky-bv.jpg
+- name: razorcliff-razorcliff-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-cinnamon-rolls.jpg
+- name: gypsy-wagon-gypsywagon-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-marcel-duchamp.jpg
+- name: windowmountain-window-mountain-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-yellow-paper.jpg
+- name: san-francisco-city-bridge-sf-city-bridge.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge.jpg
+- name: old-granary-field-oldhouse-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-umberto-bocc.jpg
+- name: christianity-christianity-under-construction-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-deep-connections.jpg
+- name: old-granary-field-granaryfield-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-neo-instinct.jpg
+- name: liberty-back-statue-liberty-back-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dark-soul.jpg
+- name: bf-skinner-train-in-station-two-coming.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-train-in-station-two-coming.jpg
+- name: legal-statue-legalstatue-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-emily-carr.jpg
+- name: eduardo-eduardo-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-clean-view.jpg
+- name: old-church-oldchurch-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-blue-brush.jpg
+- name: san-francisco-street-view-san-francisco-street-view-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-creativity.jpg
+- name: window-window-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-plentiful.jpg
+- name: liberty-back-statue-liberty-back-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-gred-mash.jpg
+- name: oldhotel-oldhotel-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-kand-two.jpg
+- name: nazi-invasion-statue-liberty-clouds-front-far.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-liberty-clouds-front-far.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-purp-paper.jpg
+- name: la-muse-early-computer-bletchley.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-early-computer-bletchley.jpg
+- name: carry-load-carryload-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-blue-brush.jpg
+- name: nazi-invasion-statue-supreme-court.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-supreme-court.jpg
+- name: hollywood-building-hollywood-building-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-kand-two.jpg
+- name: gears-4882162452-fa3126b38d-b-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-purple-storm.jpg
+- name: crow-crow-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dry-skin.jpg
+- name: stories-new-45-78-800-500-0-max-0-1--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-45-78-800-500-0-max-0-1--5.jpg
+- name: oldcabin-store-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-yellow-paper.jpg
+- name: capital-battle-capitolbattle-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-graham-sutherland.jpg
+- name: stalin-time-bridge-over-columbia.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-bridge-over-columbia.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-horiz-circuit.jpg
+- name: old-church-oldchurch-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-atari-missle.jpg
+- name: server-cloud-server-racks-door-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-deep-connections.jpg
+- name: berlinwall2-berlinwall-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-alien-goggles.jpg
+- name: store-on-corner-oldcabin-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-bright-sand.jpg
 ---
 Rahr To The Rescue.&nbsp;Richards Christmas Parade Saturday.&nbsp;China, Japan, South Korea Meet As North Korean Threat Looms.&nbsp;Mattapans DeSouza Honored For Work At Dorchester Court.&nbsp;Christian Outreach Center To Provide Free Christmas Baskets.&nbsp;Pizza Hut Fundraiser Planned For Next Tuesday.&nbsp;Find Out Where Santa Is Live As Norad Tracks His Progress!.&nbsp;Regional Gasoline Prices Dip For Third Straight Week.&nbsp;
